Closed Bug 1245106 Opened 8 years ago Closed 8 years ago

Address some compilation maybe-uninitialized warnings

Categories

(Core :: Networking, defect)

47 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: paul.bignier, Assigned: paul.bignier)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:38.0) Gecko/20100101 Firefox/38.0
Build ID: 20160127060627

Steps to reproduce:

'./mach build' in the gecko repo


Actual results:

Got [-Wmaybe-uninitialized] warnings in netwerk/


Expected results:

No warnings

Note : could not edit the 'Product' field because I didn't find a 'Netwerk' entry
Attachment #8714805 - Flags: review?(mak77)
Component: Untriaged → Networking
Product: Firefox → Core
Comment on attachment 8714805 [details] [diff] [review]
0001-Fixed-uninitialized-variables-warnings.patch

Thank you for the patch, I'm forwarding to a more proper reviewer.
Attachment #8714805 - Flags: review?(mak77) → review?(mcmanus)
Attachment #8714805 - Flags: review?(mcmanus) → review+
Assignee: nobody → paul.bignier
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
https://hg.mozilla.org/mozilla-central/rev/aea0d27779b2
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: