Bug 1245106 - necko compilation warnings r=mcmanus